<resources>
    <string name="app_name">Panikee</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="desc_button_siren">Siren Button</string>
    <string name="desc_button_bell">Bell Button</string>
    <string name="desc_button_cog">Cog Button</string>

    <!-- API -->
    <string name="mapbox_access_token">pk.eyJ1IjoiYXNkZjkyIiwiYSI6ImNqem04eTJtajBpNjQzaW15dWVra3B2MmIifQ.Q_-FLZ_m4MP_vQtsXqFGWQ</string>

    <!-- Fragment Contact -->
    <string name="fragment_contact_name">Contact Name</string>
    <string name="fragment_contact_number">Contact Number</string>
    <string name="fragment_contact_button_remove">REMOVE</string>

    <string-array name="kejahatan_arrays">
        <item>KDRT - Kejahatan dalam Rumah tangga</item>
        <item>PKS - Pemerkosaan</item>
        <item>PCR - Pencurian</item>
        <item>PCK - Penculikan</item>
        <item>JBR - Jambret</item>
        <item>KCL - Kecelakaan</item>
    </string-array>

    <string name="google_map_url">
        I\'m in distress, please help me. find me at https://www.google.com/maps/place/%1$s,%2$s
    </string>
</resources>