<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Image Icon -->
    <ImageView
        android:id="@+id/fragment_contact_list_item_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="-20dp"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:src="@drawable/phone"/>

    <!-- Contact Name -->
    <TextView
        android:id="@+id/fragment_contact_list_item_contact_name"
        app:layout_constraintTop_toTopOf="@id/fragment_contact_list_item_image"
        app:layout_constraintLeft_toRightOf="@id/fragment_contact_list_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_contact_name"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/passengersanssemibold"
        android:textColor="@color/midnight_blue"
        android:textSize="18sp"/>

    <!-- Contact Number -->
    <TextView
        android:id="@+id/fragment_contact_list_item_contact_number"
        app:layout_constraintTop_toBottomOf="@id/fragment_contact_list_item_contact_name"
        app:layout_constraintLeft_toRightOf="@id/fragment_contact_list_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_contact_number"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/passengersansregular"
        android:textSize="12sp"/>

    <!-- Remove Button -->
    <Button
        android:id="@+id/fragment_contact_list_item_btn_remove"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_contact_button_remove"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textSize="12sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>