<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight_blue"
    tools:context=".MainActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraZoom="18"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-55dp" />

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/gradient_bg_top"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PANIKEE"
        android:fontFamily="@font/passengersansbold"
        android:shadowColor="#E4E4E4"
        android:shadowDx="-2"
        android:shadowDy="3"
        android:shadowRadius="8"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/wet_ashpalt"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/gradient_bg"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/siren"
            android:id="@+id/bell"
            android:src="@drawable/bell_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/desc_button_bell" />

        <ImageView
            app:layout_constraintLeft_toRightOf="@id/bell"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/cog"
            android:id="@+id/siren"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/siren_icon"
            android:contentDescription="@string/desc_button_siren" />

        <ImageView
            app:layout_constraintLeft_toRightOf="@id/siren"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/cog"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/cog_icon"
            android:contentDescription="@string/desc_button_cog"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>